  * Previously passively left whatever was previously set unchanged.
- Always Activates Certificate Write Prevention on Windows
  * Now always activated on Windows boot regardless of whether Legacy or UEFI Windows is detected
- Fixes a bug that corrupted the ConsoleOut handle on booting EFI Loaders when running GPUs with Mac EFI
  * This bug was introduced in v0.12.0.AN (Commit 8d5e4e3)


0.13.1.AB (02 Mar 2021):
- Fixes APFS ReMapping
  * APFS Containers were not excluded as should have been the case
- Fixes Hour Logging
  * Deviation from GetTime spec meant some log files were not in chronological order


0.13.1.AA (02 Mar 2021):
-----------------------
- Syncs with Upstream Post v0.13.1 Updates
  * Adds icon for Manjaro Linux
- Syncs with Upstream v0.13.1
  * Fixes bug that can cause issues with disabled manual boot stanza referencing unreadable volumes
  * Accounts for new upstream initial logging function (ignored by RefindPlus)
  * Records selected EFI-based reboot options in the PreviousBoot variable
  * Implements support for setting systemd's LoaderDevicePartUUID EFI variable
  * Re-interpretes partial icon scaling fix implemented upstream
- Syncs with Upstream v0.13.0
  * Limited to items that did not originate from RefindPlus (which are kept in their original form)
  * Does not adopt upstream reinterpretation of RefindPlus graphics protocol detection
  * This was implemented upstream in a new 'MyLibLocateProtocol' function
  * Maintains the maximum available screen resolution as the default screen resolution
  * Selected resolutions larger than screen size reported as possibility upstream have not been observed so far
  * To be borne in mind for changes if such reports are received
  * Still accepts upstream config files including the new 'Max' resolution option (which is disregarded)
  * All other upstream options incoporated including rebooting into firmware efi and the new manual stanza options