@@ -50,6 +50,8 @@
   * Now always activated on Windows boot regardless of whether Legacy or UEFI Windows is detected
 - Fixes a bug that corrupted the ConsoleOut handle on booting EFI Loaders when running GPUs with Mac EFI
   * This bug was introduced in v0.12.0.AN (Commit 8d5e4e3)
+- Adds OpenCore and Clover to "use_graphics_for"
+  * The default screen mode on booting these boot loaders can now be set to graphics mode.
 
 
 0.13.1.AB (02 Mar 2021):
